--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "web-server",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js -e js,hbs"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
